<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mad.taxius.setting.SettingActivity"
    tools:showIn="@layout/activity_setting">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/setting_activity_distance_title"
        android:textColor="@color/color_dark_brown"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/color_light_gery" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_activity_current_range" />

            <TextView
                android:id="@+id/setting_activity_range_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="500" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_activity_meter" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/setting_activity_range_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:id="@+id/setting_activity_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/color_yellow"
        android:text="@string/setting_activity_save"
        android:textColor="@color/color_dark_brown" />

</LinearLayout>
