<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mad.taxius.journeyadd.JourneyAddActivity"
    tools:showIn="@layout/activity_journey_add">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:text="@string/journey_add_activity_title"
            android:textColor="@color/color_dark_brown"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginRight="3dp"
                android:src="@drawable/ic_departure_location" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/journey_add_activity_departure_tv_title"
                android:textColor="@color/color_dark_brown"
                android:textSize="15dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/journey_add_activity_departure_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_non_editable_text_view"
            android:padding="13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginRight="3dp"
                android:src="@drawable/ic_flag" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/journey_add_activity_destination_tv_title"
                android:textColor="@color/color_dark_brown"
                android:textSize="15dp" />

        </LinearLayout>


        <TextView
            android:id="@+id/journey_add_activity_destination_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_non_editable_text_view"
            android:padding="13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginRight="3dp"
                android:src="@drawable/ic_clock" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/journey_add_activity_departure_time_tv_title"
                android:textColor="@color/color_dark_brown"
                android:textSize="15dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/journey_add_activity_departure_time_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:background="@drawable/shape_edit_text_border"
            android:hint="@string/journey_add_activity_departure_time_tv_hint"
            android:padding="13dp" />

        <TextView
            android:id="@+id/journey_add_activity_departure_time_error_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textColor="@color/color_error_red" />

        <Button
            android:id="@+id/journey_add_activity_journey_create_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_yellow"
            android:text="@string/journey_add_activity_create_journey_btn_text"
            android:textColor="@color/color_white" />

    </LinearLayout>

</ScrollView>

