<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Journey Information"
            android:textColor="@color/color_dark_brown"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/color_light_gery" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_clock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/journey_add_activity_departure_time_tv_title"
                android:textColor="@color/color_dark_brown" />

        </LinearLayout>

        <TextView
            android:id="@+id/journey_chat_nav_departure_time_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_departure_location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/journey_chat_activity_nav_departure_place"
                android:textColor="@color/color_dark_brown" />

        </LinearLayout>

        <TextView
            android:id="@+id/journey_chat_nav_departure_place_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_flag" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/journey_chat_activity_nav_destination_place"
                android:textColor="@color/color_dark_brown" />

        </LinearLayout>

        <TextView
            android:id="@+id/journey_chat_nav_destination_place_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_light_dark_grey" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/color_light_gery" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_light_dark_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/journey_chat_activity_nav_participants"
            android:textColor="@color/color_dark_brown"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/color_light_gery" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/journey_chat_nav_joined_user_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/journey_chat_nav_cant_load_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:text="@string/journey_chat_activity_nav_cant_load_data" />

                <Button
                    android:id="@+id/journey_chat_nav_refresh_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/color_yellow"
                    android:text="@string/journey_chat_activity_nav_refresh_btn"
                    android:textColor="@color/color_dark_brown" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/journey_chat_nav_progress_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_light_dark_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <Button
            android:id="@+id/journey_chat_nav_exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_yellow"
            android:text="@string/journey_chat_activity_nav_exit_btn"
            android:textColor="@color/color_dark_brown" />

    </LinearLayout>


</LinearLayout>